# comiket-tsp

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  island_implemantation.txt
artifacts/: spaces.json
benches/: solve.rs
data/: block_layout.csv  block_layouts.csv  hall_distances.csv  want_list.csv
src/: distance.rs  io.rs  layout.rs  lib.rs  main.rs  path.rs  space.rs
src/solve/: construct.rs  ils.rs  mod.rs  two_opt.rs
tests/: layout.rs  solve.rs  space.rs
tools/: __init__.py
tools/layout/: __init__.py  config.py  csvout.py  excel.py  generate.py  model.py  test_model.py
