[package]
name = "comiket-tsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "solve"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
